public abstract class ModelVisitor
{
    public abstract void Visit(Location l);
    
    public abstract void Visit(Edge e);
    
}